2002-11-21  Scott Goodwin  <scott@scottg.net>

	* Makefile: Add a definition for $(CP). AOLserver 4.x uses the
	install program instead of CP like AOLserver 3.x. Need to update
	nsopenssl to compile using the appropriate method for 3.x and 4.x.

	* nsopenssl.h: Moved Ns_OpenSSLConn's 'struct NsOpenSSLDriver
	sdPtr' so that it is used for both 3.x and 4.x

	* nsopenssl.c: Moved declaration of 'static NsOpenSSLDriver
	firstSSLDriverPtr' so it is compiled with both 3.x and 4.x. Moved
	OpenSSLProc's conn initializer outside of the switch statement so
	that it runs first (might be a problem as this should probably
	only pertain to DriverSends and Receives. Changed OpenSSLProc to
	use recvmsg and sendmsg the same way nssock's SockProc does.


2002-10-28  Scott Goodwin  <scott@scottg.net>

	* https.tcl: Added ability to pass multiple files with ns_httpspost:

        "filesets" is a list of ns_sets, each ns_set contains information
	about each file to upload and has four keys:

               name:         the name of the form element for this file
               filename:     the name of the file
               content:      the actual contents of the file
               content-type: the type of contents in the file, such as text/plain
        
        filesets are only used with multipart/form-data

	The filesets parameter has been added to the parameters passed in:
		
	ns_httpspost {url {rqset ""} {qsset ""} {type ""} {filesets ""} {timeout 30}}

	IF YOU USE timeout IN YOUR CURRENT ns_httpspost CODE, YOU MUST
	CHANGE YOUR CALL.

	Also modified ns_httpspost to accept "" to mean the default timeout.

2002-10-18  Scott Goodwin  <scott@scottg.net>

	* ca, tests: Moved the tests and ca to a separate test
	harness. Decided it would be best to keep all tests in the test
	harness rather that the module, at least until tests for all the
	modules and the core server are written. A decision can be made at
	that time whether to integrate the testing framework into the core